Add admin sidebar, settings page, and theme improvements

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -231,6 +231,7 @@
     "shipping_info": "Información de Envío",
     "order_items": "Artículos del Pedido",
     "tracking": "Seguimiento",
+    "tracking_placeholder": "Ingresa el número de seguimiento",
     "notes": "Notas",
     "new_status": "Nuevo Estado",
     "status_updated": "Estado actualizado correctamente",
@@ -283,6 +284,47 @@
     "tags_hint": "Palabras clave separadas por comas para filtros y búsqueda.",
     "related_products": "Productos relacionados",
     "related_products_empty": "Todavía no hay productos publicados.",
+    "quick_add_product": "Agregar Producto Rápido",
+    "title_label": "Título",
+    "title_required": "El título es obligatorio (mín. 3 caracteres)",
+    "title_placeholder": "Título del producto",
+    "description_label": "Descripción",
+    "description_placeholder": "Ingresa la descripción del producto...",
+    "media": "Medios",
+    "cover_image_label": "Imagen de Portada",
+    "upload_cover_image": "Subir imagen de portada",
+    "gallery_images": "Imágenes de Galería",
+    "add_gallery_images": "Agregar imágenes de galería",
+    "details": "Detalles",
+    "material": "Material",
+    "price": "Precio",
+    "stock": "Stock",
+    "sku": "SKU",
+    "size": "Tamaño",
+    "finish": "Acabado",
+    "usage": "Uso",
+    "usage_hint": "Separados por comas",
+    "seo": "SEO",
+    "meta_title": "Título Meta",
+    "meta_description_label": "Meta Descripción",
+    "slug": "Slug",
+    "seo_preview": "Vista Previa SEO",
+    "progress": "Progreso",
+    "uploading": "Subiendo",
+    "saving": "Guardando",
+    "dismiss": "Cerrar",
+    "new_category": "Nueva Categoría",
+    "create_category": "Crear Categoría",
+    "cancel_new_category": "Cancelar",
+    "category_name": "Nombre de la categoría",
+    "new_material": "Nuevo Material",
+    "create_material": "Crear Material",
+    "material_name": "Nombre del material",
+    "spec_templates": "Plantillas de Especificaciones",
+    "add_spec": "Agregar Especificación",
+    "spec_key": "Clave",
+    "spec_value": "Valor",
+    "current_specs": "Especificaciones Actuales",
     "catalog": {
       "title": "Catálogo Master",
       "subtitle": "Gestiona las categorías, materiales, familias y tamaños disponibles",
